# autobot-trader

./: .env  .gitignore.py  grid_state.json  pyproject.toml  report_bollinger.html  report_momentum.html  report_moving_average.html  report_rsi.html  report_template.html  report_trend_following.html  report_volatility_breakout.html  signal_log.csv  trade_history.db
backtest/: analyze_backtest.py  backtest_bollinger.csv  backtest_momentum.csv  backtest_moving_average.csv  backtest_rsi.csv  backtest_runner.py  backtest_trend_following.csv  backtest_volatility_breakout.csv  generate_html_report.py
src/autobot_trader/: Generate Strategy Report.py  backtest_stoploss_takeprofit.py  db_logger.py  log_signal.py  main.py  order_executor.py  portfolio_visualizer.py  report_template.html  run.py  run_multi.py  run_multi_coin.py  telegram_bot.py  test_env.py  test_telegram.py
src/autobot_trader/strategies/: bollinger.py  grid_trading.py  momentum.py  moving_average.py  rsi.py  trend_following.py  volatility_breakout.py
